# cml-schemas

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cml_schemas/: __init__.py  base.py  cml_spark.py  pandas_schemas.py  registry.py  spark.py  spark_schemas.py
tests/unittests/: test_pandas_schemas.py  test_spark_schemas.py
